--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,7 +3,7 @@
   top: 0;
   width: 100%;
   z-index: 99;
-  height: 100vh;
+  height: 100%;
   background: #000;
   transition: transform .4s linear;
   transform: translateX(100vw);
@@ -21,12 +21,19 @@
 }
 
 .header-inner {
-  position: relative;
-  height: 100%;
-  display: block;
   padding: 0 30px;
+  display: flex;
+  flex-direction: column;
+  height: calc(100% - 100px);
+  bottom: 0;
+  position: absolute;
+  width: 100%;
+  justify-content: space-evenly;
 
   @media (min-width: 984px) {
+    position: relative;
+    height: 100%;
+    display: block;
     border-bottom: 1px solid #fff;
     display: grid;
     padding: 30px 0px;
@@ -103,30 +110,62 @@
 .header-nav {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
 
   @media (min-width: 984px) {
     grid-column: 5 / 9;
-    display: grid;
-    grid-template-columns: repeat(4, minmax(auto, 1fr));
-    grid-column-gap: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 
   &--item {
     position: relative;
     display: block;
     width: 100%;
-    padding-bottom: 35px;
+    padding-bottom: 10px;
 
     &:last-of-type {
       padding-bottom: 0px;
     }
 
+    &.is-mob {
+      @media (min-width: 984px) {
+        display: none;
+      }
+    }
+
     @media (min-width: 984px) {
       padding-bottom: 0px;
+      padding-right: 20px;
+
+      &:last-of-type {
+        padding-right: 0px;
+      }
+    }
+
+    &.has-submenu {
+      @media (min-width: 984px) {
+        .header-nav--link {
+          height: 39px;
+          border-bottom: 3px solid transparent;
+          transition: border-bottom-color .3s linear;
+        }
+
+        &:hover {
+          .header-nav--link {
+            border-bottom-color: #fff;
+          }
+
+          .header-nav--item-submenu {
+            opacity: 1;
+            z-index: 2;
+          }
+        }
+      }
     }
   }
 
@@ -136,7 +175,6 @@
     flex-direction: column;
     justify-content: space-between;
     text-decoration: none;
-    height: 60px;
     outline: none;
 
     @media (min-width: 984px) {
@@ -153,12 +191,13 @@
   &--item-title {
     padding-bottom: 3px;
     border-bottom: 1px solid #fff;
-    white-space: nowrap;
-    font-size: 32px;
+    font-size: 24px;
     line-height: 35px;
     color: #fff;
+    white-space: wrap;
 
     @media (min-width: 984px) {
+      white-space: nowrap;
       font-size: 18px;
       line-height: 18px;
       border-bottom: 1px solid #000;
@@ -166,6 +205,7 @@
   }
 
   &--item-sub-title {
+    display: none;
     color: #fff;
     font-size: 13px;
     line-height: 13px;
@@ -173,10 +213,57 @@
     padding-top: 8px;
 
     @media (min-width: 984px) {
+      display: block;
       padding-top: 0px;
       font-size: 10px;
       line-height: 10px;
       color: #000;
+    }
+  }
+
+  &--item-submenu {
+    position: absolute;
+    background: #000;
+    display: none;
+    flex-direction: row;
+    padding: 8px;
+    flex-wrap: nowrap;
+    z-index: -1;
+    align-items: center;
+    opacity: 0;
+    transition: all .3s linear;
+
+    @media (min-width: 984px) {
+      display: flex;
+    }
+  }
+
+  &--item-submenu-item {
+    position: relative;
+    display: block;
+
+    svg {
+      position: relative;
+      display: block;
+      margin: 0 8px;
+    }
+  }
+
+  &--item-submenu-link {
+    font-family: Editorial Grotesk ;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 17px;
+    color: #FFFFFF;
+    text-decoration: none;
+    white-space: nowrap;
+
+    &:hover,
+    &:active,
+    &:visited {
+      color: #FFFFFF;
+      text-decoration: none;
     }
   }
 }
