--- a/src/styles/partners.css
+++ b/src/styles/partners.css
@@ -11,13 +11,14 @@
     font-feature-settings: 'tnum' on, 'onum' on;
     color: #000000;
     padding-top: 70px;
+    grid-column: 1/3;
 
     @media (min-width: 984px) {
       padding-top: 170px;
       font-size: 88px;
       line-height: 88px;
       margin-bottom: 70px;
-      grid-column: 2 / 9;
+      grid-column: span 8;
     }
   }
 }
@@ -34,6 +35,7 @@
     letter-spacing: -0.02em;
     color: #FFFFFF;
     border-bottom: 1px solid #fff;
+    grid-column: 1/3;
 
     @media (min-width: 984px) {
       font-size: 23px;
@@ -48,23 +50,23 @@
   &--wrap {
     position: relative;
     display: flex;
-    flex-direction: row;
-    padding: 63px 0 135px;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 30px 0 60px;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
+    grid-column: 1/3;
+    max-width: 800px;
 
     @media (min-width: 984px) {
       padding: 63px 0 135px;
       grid-column: 2 / 9;
+      flex-direction: row;
+      align-items: center;
     }
 
     &.no-padding {
       padding: 0;
-      justify-content: flex-start;
-
-      .partners-items--single:nth-of-type(1) {
-        padding-right: 70px;
-      }
     }
   }
 
@@ -73,10 +75,14 @@
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
+    padding: 30px 0 60px;
+    grid-column: 1/3;
+    flex-direction: column;
 
     @media (min-width: 984px) {
       padding: 63px 0 135px;
       grid-column: 2 / 9;
+      flex-direction: row;
     }
   }
 
@@ -84,14 +90,22 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    width: 100%;
 
     &:nth-of-type(1) {
-      width: calc(30% + 150px);
-      padding-right: 150px;
+      padding-bottom: 63px;
     }
 
-    &:nth-of-type(2) {
-      width: 70%;
+    @media (min-width: 984px) {
+      &:nth-of-type(1) {
+        width: calc(30% + 150px);
+        padding-right: 150px;
+        padding-bottom: 0px;
+      }
+
+      &:nth-of-type(2) {
+        width: 70%;
+      }
     }
   }
 
@@ -103,17 +117,47 @@
     line-height: 20px;
     letter-spacing: -0.02em;
     color: #000000;
-    padding-bottom: 60px;
+    padding-bottom: 30px;
     width: 100%;
     flex: 1;
+
+    @media (min-width: 984px) {
+      padding-bottom: 60px;
+    }
   }
 
   &--single {
     position: relative;
     display: block;
+    padding-bottom: 40px;
+
+    &.jager {
+      width: 152px;
+
+      svg {
+        width: 100%;
+      }
+
+      @media (min-width: 984px) {
+        flex-basis: 100%;
+
+        svg {
+          width: 175px;
+        }
+      }
+    }
+
+    svg {
+      position: relative;
+      display: block;
+    }
+
+    &.rambler {
+      width: 160px;
+    }
 
     &.the-village {
-      width: 131px;
+      width: 160px;
 
       img {
         position: relative;
