--- a/src/styles/artist.css
+++ b/src/styles/artist.css
@@ -10,6 +10,156 @@
     grid-template-columns: repeat(8, minmax(auto, 1fr));
     grid-column-gap: 30px;
   }
+
+  &.is-ishome {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background-image: url('./assets/ishome/bg.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    .artist-inner {
+      padding-top: 130px;
+
+      @media (max-width: 983px) {
+        padding-top: calc(94px + 35px);
+      }
+    }
+  }
+}
+
+.artist-afisha {
+  position: relative;
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+
+  @media screen and (min-width: 984px) and (max-width: 1439px) {
+    grid-column: 2/8;
+  }
+
+  @media (min-width: 1440px) {
+    grid-column: 3/7;
+  }
+
+  &--img {
+    position: relative;
+    display: block;
+    width: 100%;
+    padding-top: 100%;
+
+    @media screen and (min-width: 600px) and (max-width: 799px) {
+      padding-top: 60%;
+    }
+
+    @media screen and (min-width: 800px) and (max-width: 983px) {
+      padding-top: 50%;
+    }
+
+    @media screen and (min-width: 984px) and (max-width: 1439px) {
+      padding-top: 55%;
+    }
+
+    @media (min-width: 1440px) {
+      padding-top: 80%;
+    }
+
+    img {
+      position: absolute;
+      display: block;
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      top: 0;
+      filter: sepia(1);
+    }
+  }
+
+  &--tickets {
+    position: absolute;
+    top: calc(94px + 35px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #fff;
+    text-align: center;
+    padding-top: 10px;
+    z-index: 1;
+    width: 100%;
+
+    @media (min-width: 984px) {
+      top: 130px;
+      grid-column: 2/8;
+    }
+
+    a {
+      position: relative;
+      color: #000;
+      text-decoration: none;
+      margin-top: 7px;
+      padding: 10px 10px 8px;
+      border: 1px solid #fff;
+      background: #fff;
+
+      @media (min-width: 984px) {
+        padding-top: 15px;
+      }
+    }
+
+    a:visited,
+    a:hover,
+    a:focus,
+    a:active {
+      color: #000;
+      text-decoration: none;
+    }
+  }
+
+  &--tickets-title {
+    position: relative;
+    display: inline-block;
+    color: #fff;
+    padding: 10px 10px 8px;
+  }
+
+  &--name {
+    position: absolute;
+    bottom: 0;
+    color: #fff;
+    text-align: center;
+    width: 100%;
+    bottom: -18px;
+    height: 36px;
+
+    @media (min-width: 984px) {
+      bottom: -24px;
+      height: 48px;
+    }
+  }
+
+  &--name-main {
+    font-size: 30px;
+    line-height: 36px;
+
+    @media (min-width: 984px) {
+      font-size: 52px;
+      line-height: 48px;
+    }
+  }
+
+  &--name-third {
+    font-size: 23px;
+    line-height: 36px;
+    padding-top: 10px;
+
+    @media (min-width: 984px) {
+      font-size: 32px;
+      line-height: 32px;
+      padding-top: 20px;
+    }
+  }
 }
 
 .education-register--link {
