--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -38,7 +38,7 @@
   }
 
   @media (min-width: 984px) {
-    background: #b0b6bb;
+    background: #fd060c;
     height: auto;
     transform: none;
     padding: 0 60px;
