--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,7 +8,7 @@
 
   @media (min-width: 984px) {
     padding: 0 60px;
-    grid-template-columns: repeat(8, minmax(auto, 1fr));
+    grid-template-columns: repeat(8, minmax(30px, 1fr));
     grid-column-gap: 30px;
     top: 115px;
   }
@@ -19,13 +19,13 @@
     position: relative;
     display: grid;
     padding: 0;
-    grid-template-columns: repeat(2,minmax(auto,1fr));
+    grid-template-columns: repeat(2,minmax(10px,1fr));
     grid-column-gap: 20px;
     grid-column: span 2;
     padding-top: 70px;
 
     @media (min-width: 984px) {
-      grid-template-columns: repeat(8, minmax(auto, 1fr));
+      grid-template-columns: repeat(8, minmax(30px, 1fr));
       grid-column-gap: 30px;
       grid-column: span 8;
       padding-top: 110px;
