--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -38,7 +38,7 @@
   }
 
   @media (min-width: 984px) {
-    background: #fd060c;
+    background: transparent;
     height: auto;
     transform: none;
     padding: 0 60px;
@@ -160,7 +160,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-end;
   }
 
   &--item {
