--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -143,18 +143,20 @@
     top: 30px;
   }
 
-  &--item {
-    position: absolute;
-    display: block;
-    width: 95%;
+  &--wrap {
+    position: fixed;
+    height: 100%;
+    width: 100%;
     top: 0;
-    left: 2.5%;
+    left: 0;
+  }
 
-    @media (min-width: 984px) {
-      left: 50%;
-      top: 0%;
-      transform: translate(-50%,0%);
-    }
+  &--item {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
 
